--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
         </fieldset>
         
         <fieldset class="last">
-            This site is supported by paid affiliate links. <a href="/faq.html#disclosures">Learn more</a>
+            This site is supported by paid affiliate links. <a href="/amazon-affiliate-disclosure.html">Learn more</a>
         </fieldset>
     </div>
 
