--- a/index.html
+++ b/index.html
@@ -382,10 +382,10 @@
             <ul>
                 <li><a href="/faq.html">FAQ</a></li>
                 <li><a href="/privacy-policy.html">Privacy Policy</a></li>
-                <li><a href="/terms-of-use.html">Terms of Use</a></li>
+                <li><a href="/terms-of-service.html">Terms of Use</a></li>
                 <li><a href="/amazon-affiliate-disclosure.html">Amazon Affiliate Disclosure</a></li>
                 <li><a href="/contact.html">Contact Us</a></li>
-                <li><a href="/about.html">About Us</a></li>
+                <li><a href="/about-us.html">About Us</a></li>
             </ul>
         </fieldset>
         
@@ -454,10 +454,10 @@
             <div style="text-align: center; padding: 15px; border-top: 1px solid #eee;">
                 <a href="/faq.html" style="margin: 0 15px; color: #666; text-decoration: none; font-size: 12px;">FAQ</a> | 
                 <a href="/privacy-policy.html" style="margin: 0 15px; color: #666; text-decoration: none; font-size: 12px;">Privacy Policy</a> | 
-                <a href="/terms-of-use.html" style="margin: 0 15px; color: #666; text-decoration: none; font-size: 12px;">Terms of Use</a> | 
+                <a href="/terms-of-service.html" style="margin: 0 15px; color: #666; text-decoration: none; font-size: 12px;">Terms of Use</a> | 
                 <a href="/amazon-affiliate-disclosure.html" style="margin: 0 15px; color: #666; text-decoration: none; font-size: 12px;">Amazon Affiliate Disclosure</a> | 
                 <a href="/contact.html" style="margin: 0 15px; color: #666; text-decoration: none; font-size: 12px;">Contact Us</a> | 
-                <a href="/about.html" style="margin: 0 15px; color: #666; text-decoration: none; font-size: 12px;">About Us</a>
+                <a href="/about-us.html" style="margin: 0 15px; color: #666; text-decoration: none; font-size: 12px;">About Us</a>
             </div>
         </div>
     </div>
