--- a/index.html
+++ b/index.html
@@ -380,37 +380,7 @@
                         <th>Affiliate Link</th>
                     </tr>
                 </thead>
-                <tbody id="powerprices-body" lang="en">                    			
-					<tr class="generator" data-product-key="ampace-portable-power-station-andes-300-266wh-batt" data-product-type="small_wattage" data-condition="new" data-capacity="266" data-wattage="300" data-fuel-type="solar" data-engine-type="electric" data-brand="other_brand" data-price="0">
-						<td class="price">N/A</td>
-						<td class="price-per-watt">N/A</td>
-						<td>300</td>
-						<td>266Wh</td>
-						<td>Solar</td>
-						<td>Electric</td>
-						<td>New</td>
-						<td class="name"><a href="https://amzn.to/4n2c1U1" target="_blank" rel="noopener noreferrer">AMPACE Portable Power Station Andes 300, 266Wh Battery with 300W AC/100W USB-C Output, 1Hr Fast Charging, 8.2lbs Solar Generator for RV, Outdoors, Camping batteries, Traveling, (Solar Panel Optional)</a></td>
-					</tr>
-					<tr class="generator" data-product-key="growatt-portable-power-station-infinity-2000-black" data-product-type="large_wattage" data-condition="new" data-capacity="2048" data-wattage="2400" data-fuel-type="solar" data-engine-type="electric" data-brand="other_brand" data-price="0">
-						<td class="price">N/A</td>
-						<td class="price-per-watt">N/A</td>
-						<td>2400</td>
-						<td>2048Wh</td>
-						<td>Solar</td>
-						<td>Electric</td>
-						<td>New</td>
-						<td class="name"><a href="https://amzn.to/4nMYAaD" target="_blank" rel="noopener noreferrer">GROWATT Portable Power Station ?INFINITY 2000 Black Electric Solar Generator?2048Wh LifePO4 Battery,2400W AC Output for Home Use, Outdoor Camping, RVs and Emergency Backup(Solar Panel Optional)</a></td>
-					</tr>
-					<tr class="generator" data-product-key="litheli-portable-power-station-eclair-1000-1800w-s" data-product-type="large_wattage" data-condition="new" data-capacity="1069" data-wattage="1800" data-fuel-type="solar" data-engine-type="electric" data-brand="other_brand" data-price="0">
-						<td class="price">N/A</td>
-						<td class="price-per-watt">N/A</td>
-						<td>1800</td>
-						<td>1069Wh</td>
-						<td>Solar</td>
-						<td>Electric</td>
-						<td>New</td>
-						<td class="name"><a href="https://amzn.to/4n88zY8" target="_blank" rel="noopener noreferrer">Litheli Portable Power Station Eclair 1000, 1800W Solar Generator, 1069Wh Outdoor Generator, 1H Fast Charging LiFePO4 Power Station for Outdoor Camping, Emergency and RVs(Solar Panels Optional)</a></td>
-					</tr>
+                <tbody id="powerprices-body" lang="en">                  			
 					<tr class="generator" data-product-key="dji-power-1000-portable-power-station-1024wh-lifep" data-product-type="large_wattage" data-condition="new" data-capacity="1024" data-wattage="2200" data-fuel-type="solar" data-engine-type="electric" data-brand="other_brand" data-price="0">
 						<td class="price">N/A</td>
 						<td class="price-per-watt">N/A</td>
@@ -419,7 +389,7 @@
 						<td>Solar</td>
 						<td>Electric</td>
 						<td>New</td>
-						<td class="name"><a href="https://amzn.to/4niyXhi" target="_blank" rel="noopener noreferrer">DJI Power 1000 Portable Power Station, 1024Wh LiFePO4 Battery, 2200W (Peak 2600W) AC/140W USB-C Output, 23db Ultra-Silent, Solar Generator For Home Backup, Camping(Solar Panel Optional)</a></td>
+						<td class="name"><a href="https://amzn.to/4nuXr7n" target="_blank" rel="noopener noreferrer">DJI Power 1000 Portable Power Station, 1024Wh LiFePO4 Battery, 2200W (Peak 2600W) AC/140W USB-C Output, 23db Ultra-Silent, Solar Generator For Home Backup, Camping(Solar Panel Optional)</a></td>
 					</tr>
 					<tr class="generator" data-product-key="bluetti-solar-generator-ac70-768wh-lifepo4-battery" data-product-type="medium_wattage" data-condition="new" data-capacity="768" data-wattage="1000" data-fuel-type="battery" data-engine-type="electric" data-brand="bulleti" data-price="0">
 						<td class="price">N/A</td>
@@ -429,7 +399,7 @@
 						<td>Battery</td>
 						<td>Electric</td>
 						<td>New</td>
-						<td class="name"><a href="https://amzn.to/4niyXhi" target="_blank" rel="noopener noreferrer">BLUETTI Solar Generator AC70, 768Wh LiFePO4 Battery Backup w/ 2 1000W AC Outlets (Power Lifting 2000W), 100W Type-C, for Road Trip, Off-grid, Power Outage (Solar Panel Optional)</a></td>
+						<td class="name"><a href="https://amzn.to/3Keq1LE" target="_blank" rel="noopener noreferrer">BLUETTI Solar Generator AC70, 768Wh LiFePO4 Battery Backup w/ 2 1000W AC Outlets (Power Lifting 2000W), 100W Type-C, for Road Trip, Off-grid, Power Outage (Solar Panel Optional)</a></td>
 					</tr>
 					<tr class="generator" data-product-key="ef-ecoflow-portable-power-station-river-2-pro-768w" data-product-type="medium_wattage" data-condition="new" data-capacity="768" data-wattage="800" data-fuel-type="solar" data-engine-type="electric" data-brand="ef_ecoflow" data-price="0">
 						<td class="price">N/A</td>
@@ -439,7 +409,7 @@
 						<td>Solar</td>
 						<td>Electric</td>
 						<td>New</td>
-						<td class="name"><a href="https://amzn.to/4niyXhi" target="_blank" rel="noopener noreferrer">EF ECOFLOW Portable Power Station RIVER 2 Pro, 768Wh LiFePO4 Battery, 70 Min Fast Charging, 4X800W (X-Boost 1600W) AC Outlets, Solar Generator for Outdoor Camping/RVs/Home Use Black</a></td>
+						<td class="name"><a href="https://amzn.to/47D9dI1" target="_blank" rel="noopener noreferrer">EF ECOFLOW Portable Power Station RIVER 2 Pro, 768Wh LiFePO4 Battery, 70 Min Fast Charging, 4X800W (X-Boost 1600W) AC Outlets, Solar Generator for Outdoor Camping/RVs/Home Use Black</a></td>
 					</tr>
 					<tr class="generator" data-product-key="anker-solix-f2000-portable-power-station-powerhous" data-product-type="large_wattage" data-condition="new" data-capacity="1048" data-wattage="2400" data-fuel-type="solar" data-engine-type="electric" data-brand="anker" data-price="0">
 						<td class="price">N/A</td>
@@ -449,7 +419,7 @@
 						<td>Solar</td>
 						<td>Electric</td>
 						<td>New</td>
-						<td class="name"><a href="https://amzn.to/4niyXhi" target="_blank" rel="noopener noreferrer">Anker SOLIX F2000 Portable Power Station, PowerHouse 767, 2400W Solar Generator, GaNPrime Battery Generators for Home Use, LiFePO4 Power Station for Outdoor Camping, and RVs (Solar Panel Optional)</a></td>
+						<td class="name"><a href="https://amzn.to/3VvFERD" target="_blank" rel="noopener noreferrer">Anker SOLIX F2000 Portable Power Station, PowerHouse 767, 2400W Solar Generator, GaNPrime Battery Generators for Home Use, LiFePO4 Power Station for Outdoor Camping, and RVs (Solar Panel Optional)</a></td>
 					</tr>
 					<tr class="generator" data-product-key="jackery-solar-generator-5000-plus-portable-power-s" data-product-type="large_wattage" data-condition="new" data-capacity="5040" data-wattage="7200" data-fuel-type="solar" data-engine-type="electric" data-brand="jackery" data-price="0">
 						<td class="price">N/A</td>
@@ -459,7 +429,7 @@
 						<td>Solar</td>
 						<td>Electric</td>
 						<td>New</td>
-						<td class="name"><a href="https://amzn.to/4niyXhi" target="_blank" rel="noopener noreferrer">Jackery Solar Generator 5000 Plus Portable Power Station with 2x 500W Solar Panels and Smart Transfer Switch, 5040Wh Power Station, 7200W AC Output Solar Generator for Home Use, Emergency Backup</a></td>
+						<td class="name"><a href="https://amzn.to/46eaByB" target="_blank" rel="noopener noreferrer">Jackery Solar Generator 5000 Plus Portable Power Station with 2x 500W Solar Panels and Smart Transfer Switch, 5040Wh Power Station, 7200W AC Output Solar Generator for Home Use, Emergency Backup</a></td>
 					</tr>
 					<tr class="generator" data-product-key="dabbsson-2000l-solar-generator2025-new-2048wh-semi" data-product-type="large_wattage" data-condition="new" data-capacity="2048" data-wattage="2200" data-fuel-type="solar" data-engine-type="electric" data-brand="other_brand" data-price="0">
 						<td class="price">N/A</td>
@@ -469,7 +439,7 @@
 						<td>Solar</td>
 						<td>Electric</td>
 						<td>New</td>
-						<td class="name"><a href="https://amzn.to/4niyXhi" target="_blank" rel="noopener noreferrer">DABBSSON 2000L Solar Generator(2025 New), 2048Wh Semi-Solid LiFePO4, 2200W AC Output&6, P-Boost 3300W, Compact&Lightweight, 1.3X Runtime, Portable Power Station for Camping/Home/RV</a></td>
+						<td class="name"><a href="https://amzn.to/4pdQbyt" target="_blank" rel="noopener noreferrer">DABBSSON 2000L Solar Generator(2025 New), 2048Wh Semi-Solid LiFePO4, 2200W AC Output&6, P-Boost 3300W, Compact&Lightweight, 1.3X Runtime, Portable Power Station for Camping/Home/RV</a></td>
 					</tr>
 					<tr class="generator" data-product-key="zerokor-portable-solar-generator-300w-portable-pow" data-product-type="small_wattage" data-condition="new" data-capacity="380" data-wattage="300" data-fuel-type="solar" data-engine-type="electric" data-brand="zerokor" data-price="0">
 						<td class="price">N/A</td>
@@ -479,7 +449,7 @@
 						<td>Solar</td>
 						<td>Electric</td>
 						<td>New</td>
-						<td class="name"><a href="https://amzn.to/4niyXhi" target="_blank" rel="noopener noreferrer">ZeroKor Portable Solar Generator, 300W Portable Power Station with Foldable 60W Solar Panel, 110V Pure Sine Wave 280Wh Lithium Battery Pack with USB DC AC Outlet for Home Use RV Van Outdoor Camping-Orange</a></td>
+						<td class="name"><a href="https://amzn.to/4n0UDyW" target="_blank" rel="noopener noreferrer">ZeroKor Portable Solar Generator, 300W Portable Power Station with Foldable 60W Solar Panel, 110V Pure Sine Wave 280Wh Lithium Battery Pack with USB DC AC Outlet for Home Use RV Van Outdoor Camping-Orange</a></td>
 					</tr>
 					<tr class="generator" data-product-key="allpowers-600w-portable-power-station-299wh-lifepo" data-product-type="medium_wattage" data-condition="new" data-capacity="299" data-wattage="600" data-fuel-type="solar" data-engine-type="electric" data-brand="allpowers" data-price="0">
 						<td class="price">N/A</td>
@@ -489,7 +459,7 @@
 						<td>Solar</td>
 						<td>Electric</td>
 						<td>New</td>
-						<td class="name"><a href="https://amzn.to/4niyXhi" target="_blank" rel="noopener noreferrer">ALLPOWERS 600w Portable Power Station, 299Wh LiFePO4 Battery Backup, R600(Peak 1200w) Solar Generator, 1 Hour Fast Charge Solar Power Bank, for Home Outdoor Travel Emergency RV</a></td>
+						<td class="name"><a href="https://amzn.to/4605svc" target="_blank" rel="noopener noreferrer">ALLPOWERS 600w Portable Power Station, 299Wh LiFePO4 Battery Backup, R600(Peak 1200w) Solar Generator, 1 Hour Fast Charge Solar Power Bank, for Home Outdoor Travel Emergency RV</a></td>
 					</tr>
 					<tr class="generator" data-product-key="grecell-1000w-portable-power-station-with-2x-100w-" data-product-type="medium_wattage" data-condition="new" data-capacity="999" data-wattage="1000" data-fuel-type="solar" data-engine-type="electric" data-brand="grecell" data-price="0">
 						<td class="price">N/A</td>
@@ -509,7 +479,7 @@
 						<td>Solar</td>
 						<td>Electric</td>
 						<td>New</td>
-						<td class="name"><a href="https://amzn.to/4niyXhi" target="_blank" rel="noopener noreferrer">Pecron Portable Power Station E1000LFP, 1024Wh/1800W LiFePO4 Battery Backup, Solar Generator Expandable to 4096Wh, Fast Charging Power Station for Emergencies, Camping, RV, Home Use</a></td>
+						<td class="name"><a href="https://amzn.to/3JVcLeZ" target="_blank" rel="noopener noreferrer">Pecron Portable Power Station E1000LFP, 1024Wh/1800W LiFePO4 Battery Backup, Solar Generator Expandable to 4096Wh, Fast Charging Power Station for Emergencies, Camping, RV, Home Use</a></td>
 					</tr>
                 </tbody>
             </table>
