--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                         <td>Solar</td>
                         <td>Electric</td>
                         <td>New</td>
-                        <td class="name"><a href="https://amzn.to/4niyXhi" target="_blank" rel="noopener noreferrer">DJI Power 1000 Portable Power Station, 1024Wh LiFePO4 Battery, 2200W (Peak 2600W) AC/140W USB-C Output, 23db Ultra-Silent, Solar Generator For Home Backup, Camping(Solar Panel Optional)</a></td>
+                        <td class="name"><a href="https://amzn.to/4nuXr7n" target="_blank" rel="noopener noreferrer">DJI Power 1000 Portable Power Station, 1024Wh LiFePO4 Battery, 2200W (Peak 2600W) AC/140W USB-C Output, 23db Ultra-Silent, Solar Generator For Home Backup, Camping(Solar Panel Optional)</a></td>
                     </tr>
 
                     <!-- BLUETTI Solar Generator -->
@@ -402,7 +402,7 @@
                         <td>Battery</td>
                         <td>Electric</td>
                         <td>New</td>
-                        <td class="name"><a href="https://amzn.to/4niyXhi" target="_blank" rel="noopener noreferrer">BLUETTI Solar Generator AC70, 768Wh LiFePO4 Battery Backup w/ 2 1000W AC Outlets (Power Lifting 2000W), 100W Type-C, for Road Trip, Off-grid, Power Outage (Solar Panel Optional)</a></td>
+                        <td class="name"><a href="https://amzn.to/3Keq1LE" target="_blank" rel="noopener noreferrer">BLUETTI Solar Generator AC70, 768Wh LiFePO4 Battery Backup w/ 2 1000W AC Outlets (Power Lifting 2000W), 100W Type-C, for Road Trip, Off-grid, Power Outage (Solar Panel Optional)</a></td>
                     </tr>
 
                     <!-- EF ECOFLOW Portable Power Station -->
@@ -414,7 +414,7 @@
                         <td>Solar</td>
                         <td>Electric</td>
                         <td>New</td>
-                        <td class="name"><a href="https://amzn.to/4niyXhi" target="_blank" rel="noopener noreferrer">EF ECOFLOW Portable Power Station RIVER 2 Pro, 768Wh LiFePO4 Battery, 70 Min Fast Charging, 4X300W AC Outlets, Solar Generator for Outdoor Camping/RVs/Home Use Black</a></td>
+                        <td class="name"><a href="https://amzn.to/47D9dI1" target="_blank" rel="noopener noreferrer">EF ECOFLOW Portable Power Station RIVER 2 Pro, 768Wh LiFePO4 Battery, 70 Min Fast Charging, 4X300W AC Outlets, Solar Generator for Outdoor Camping/RVs/Home Use Black</a></td>
                     </tr>
 
                     <!-- Anker SOLIX F2000 -->
@@ -426,7 +426,7 @@
                         <td>Solar</td>
                         <td>Electric</td>
                         <td>New</td>
-                        <td class="name"><a href="https://amzn.to/4niyXhi" target="_blank" rel="noopener noreferrer">Anker SOLIX F2000 Portable Power Station, Powerhouse 767, 2400W Solar Generator, GaNPrime Battery Generators for Home Use, LiFePO4 Power Station for Outdoor Camping, and RVs (Solar Panel Optional)</a></td>
+                        <td class="name"><a href="https://amzn.to/3VvFERD" target="_blank" rel="noopener noreferrer">Anker SOLIX F2000 Portable Power Station, Powerhouse 767, 2400W Solar Generator, GaNPrime Battery Generators for Home Use, LiFePO4 Power Station for Outdoor Camping, and RVs (Solar Panel Optional)</a></td>
                     </tr>
 
                     <!-- Jackery Solar Generator 5000 Plus -->
@@ -438,7 +438,7 @@
                         <td>Solar</td>
                         <td>Electric</td>
                         <td>New</td>
-                        <td class="name"><a href="https://amzn.to/4niyXhi" target="_blank" rel="noopener noreferrer">Jackery Solar Generator 5000 Plus Portable Power Station with 2x 500W Solar Panels and Smart Transfer Switch, 5040Wh Power Station, 7200W AC Output Solar Generator for Home Use, Emergency Backup</a></td>
+                        <td class="name"><a href="https://amzn.to/46eaByB" target="_blank" rel="noopener noreferrer">Jackery Solar Generator 5000 Plus Portable Power Station with 2x 500W Solar Panels and Smart Transfer Switch, 5040Wh Power Station, 7200W AC Output Solar Generator for Home Use, Emergency Backup</a></td>
                     </tr>
 
                     <!-- DABBSSON 2000L Solar Generator -->
@@ -450,7 +450,7 @@
                         <td>Solar</td>
                         <td>Electric</td>
                         <td>New</td>
-                        <td class="name"><a href="https://amzn.to/4niyXhi" target="_blank" rel="noopener noreferrer">DABBSSON 2000L Solar Generator(2025 New), 2048Wh Semi-Solid LiFePO4, 2200W AC Output&8, P-Boost 3300W, Compact&Lightweight, 1.3X Runtime, Portable Power Station for Camping/Home/RV</a></td>
+                        <td class="name"><a href="https://amzn.to/4pdQbyt" target="_blank" rel="noopener noreferrer">DABBSSON 2000L Solar Generator(2025 New), 2048Wh Semi-Solid LiFePO4, 2200W AC Output&8, P-Boost 3300W, Compact&Lightweight, 1.3X Runtime, Portable Power Station for Camping/Home/RV</a></td>
                     </tr>
 
                     <!-- ZeroKor Portable Solar Generator -->
@@ -462,7 +462,7 @@
                         <td>Solar</td>
                         <td>Electric</td>
                         <td>New</td>
-                        <td class="name"><a href="https://amzn.to/4niyXhi" target="_blank" rel="noopener noreferrer">ZeroKor Portable Solar Generator, 300W Portable Power Station with Foldable 60W Solar Panel, 110V Pure Sine Wave 280Wh Lithium Battery Pack with USB DC AC Outlet for Home Use RV Van Outdoor Camping-Orange</a></td>
+                        <td class="name"><a href="https://amzn.to/4n0UDyW" target="_blank" rel="noopener noreferrer">ZeroKor Portable Solar Generator, 300W Portable Power Station with Foldable 60W Solar Panel, 110V Pure Sine Wave 280Wh Lithium Battery Pack with USB DC AC Outlet for Home Use RV Van Outdoor Camping-Orange</a></td>
                     </tr>
 
                     <!-- GRECELL 1000W Portable Power Station -->
@@ -486,7 +486,7 @@
                         <td>Solar</td>
                         <td>Electric</td>
                         <td>New</td>
-                        <td class="name"><a href="https://amzn.to/4niyXhi" target="_blank" rel="noopener noreferrer">ALLPOWERS 600W Portable Power Station, 299Wh LiFePO4 Battery Backup, R600(Peak 1200w) Solar Generator, 1 Hour Full Charge Solar Power Bank, for Home Outdoor Travel Emergency RV</a></td>
+                        <td class="name"><a href="https://amzn.to/4605svc" target="_blank" rel="noopener noreferrer">ALLPOWERS 600W Portable Power Station, 299Wh LiFePO4 Battery Backup, R600(Peak 1200w) Solar Generator, 1 Hour Full Charge Solar Power Bank, for Home Outdoor Travel Emergency RV</a></td>
                     </tr>
 
                     <!-- Pecron Portable Power Station E1000LFP -->
@@ -498,7 +498,7 @@
                         <td>Solar</td>
                         <td>Electric</td>
                         <td>New</td>
-                        <td class="name"><a href="https://amzn.to/4niyXhi" target="_blank" rel="noopener noreferrer">Pecron Portable Power Station E1000LFP, 1024Wh/1800W LiFePO4 Battery Backup, Solar Generator, Expandable to 4096Wh, Fast Charging Power Station for Emergencies, Camping, RV, Home Use</a></td>
+                        <td class="name"><a href="https://amzn.to/3JVcLeZ" target="_blank" rel="noopener noreferrer">Pecron Portable Power Station E1000LFP, 1024Wh/1800W LiFePO4 Battery Backup, Solar Generator, Expandable to 4096Wh, Fast Charging Power Station for Emergencies, Camping, RV, Home Use</a></td>
                     </tr>
 					
 					<tr class="generator" data-product-key="ampace-portable-power-station-andes-300-266wh-batt" data-product-type="small_wattage" data-condition="new" data-capacity="266" data-wattage="300" data-fuel-type="solar" data-engine-type="electric" data-brand="other_brand" data-price="0">
