--- a/index-template.html
+++ b/index-template.html
@@ -44,6 +44,12 @@
         td.name {
             white-space: normal;
         }
+		
+		td.affiliate-link {
+			white-space: normal;
+			word-break: break-word;
+		}
+
 
         th {
             padding-right: 0.75em;
@@ -411,8 +417,8 @@
 <tbody id="powerprices-body" lang="en">
 <!-- DJI Power 1000 -->
 <tr class="generator" data-brand="other_brand" data-capacity="1024" data-condition="new" data-fuel-type="solar" data-price="0" data-product-key="dji-power-1000-portable" data-product-type="large_wattage" data-running-wattage="2200" data-starting-wattage="2600" data-run-time="12" data-weight="24">
-<td class="price">$499.00</td>
-<td class="price-per-watt">$0.227</td>
+<td class="price">N/A</td>
+<td class="price-per-watt">N/A</td>
 <td>2200</td>
 <td>2600</td>
 <td>12</td>
@@ -423,8 +429,8 @@
 </tr>
 <!-- BLUETTI Solar Generator -->
 <tr class="generator" data-brand="bulleti" data-capacity="768" data-condition="new" data-fuel-type="battery" data-price="0" data-product-key="bluetti-ac70-768wh" data-product-type="medium_wattage" data-running-wattage="1000" data-starting-wattage="2000" data-run-time="8" data-weight="22">
-<td class="price">$569.00</td>
-<td class="price-per-watt">$0.569</td>
+<td class="price">N/A</td>
+<td class="price-per-watt">N/A</td>
 <td>1000</td>
 <td>2000</td>
 <td>8</td>
