--- a/index-template.html
+++ b/index-template.html
@@ -136,10 +136,15 @@
             vertical-align: middle;
             line-height: 1.3;
         }
+		
+        th:nth-child(1), td:nth-child(1) {
+            width: 50px;
+            min-width: 50px;
+        }		
 
         th:nth-child(2), td:nth-child(2) {
             width: 60px;
-            min-width: 70px;
+            min-width: 50px;
         }
 
         th:nth-child(3), td:nth-child(3) {
@@ -153,13 +158,13 @@
         }
 
         th:nth-child(5), td:nth-child(5) {
-            width: 60px;
-            min-width: 60px;
+            width: 50px;
+            min-width: 50px;
         }
 
         th:nth-child(6), td:nth-child(6) {
             width: 50px;
-            min-width: 70px;
+            min-width: 50px;
         }
 
         th:nth-child(7), td:nth-child(7) {
@@ -169,12 +174,12 @@
 
         th:nth-child(8), td:nth-child(8) {
             width: 50px;
-            min-width: 60px;
+            min-width: 50px;
         }
 
         th:nth-child(9), td:nth-child(9) {
-            width: 450px;
-            min-width: 450px;
+            width: 550px;
+            min-width: 550px;
         }
 
         .filtered-out {
