--- a/index-template.html
+++ b/index-template.html
@@ -372,7 +372,7 @@
 <label><input checked="" data-brand="westinghouse" type="checkbox"/>Westinghouse</label>
 <label><input checked="" data-brand="zerokor" type="checkbox"/>ZeroKor</label>
 <label><input checked="" data-brand="ef_ecoflow" type="checkbox"/>EF Ecoflow</label>
-<label><input checked="" data-brand="bulleti" type="checkbox"/>Bulleti</label>
+<label><input checked="" data-brand="bluetti" type="checkbox"/>BLUETTI</label>
 <label><input checked="" data-brand="jackery" type="checkbox"/>Jackery</label>
 <label><input checked="" data-brand="anker" type="checkbox"/>Anker</label>
 <label><input checked="" data-brand="marbero" type="checkbox"/>MARBERO</label>
