--- a/index-template.html
+++ b/index-template.html
@@ -285,6 +285,7 @@
             }
         }
     </style>
+	<meta name="msvalidate.01" content="A753E6563A680CBD1C623D29E2F10E3B" />
 </head>
 <body>
 <div id="affiliate-disclosure" style="
